# stat-themo

./: README.md  pyproject.toml
stat-thermo/assignment-1/: Assignment_1.ipynb  SQM_data.csv  normal.py  pi.py  question_2c.py  uniform.py
stat-thermo/assignment-2/: Ar_histo_200.txt  Ar_histo_250.txt  Ar_histo_300.txt  Ar_histo_350.txt  Ar_histo_400.txt  Ar_histo_450.txt  KE.NVE  KE.NVT  PE.NVE  PE.NVT  SimulationArgon.py  TE.NVE  TE.NVT  Vanalysis.py  a2-notebook.ipynb  arBox.py  genPairDistancesArgon.py  q1-q2.ipynb  q3.ipynb  rOO.NVE  rOO.NVT  simulation_log_argon_200.txt  simulation_log_argon_250.txt  simulation_log_argon_300.txt  simulation_log_argon_350.txt  simulation_log_argon_400.txt  simulation_log_argon_450.txt  water2.py  water2_NVE.h5  water2_NVT.h5  water2_pandas.py  waterBox.py
stat-thermo/assignment-2/.ipynb_checkpoints/: a2-notebook-checkpoint.ipynb  genPairDistancesWater-checkpoint.py
stat-thermo/assignment-2/openmmtools/: __init__.py  _version.py
stat-thermo/assignment-3/: question1.ipynb
stat-thermo/polars-testing/: 1_intro.ipynb  2_eda.ipynb  3_manipulation.ipynb  4_cleaning.ipynb  5_aggregating.ipynb
stat-thermo/polymers/: Specimen_RawData_2.csv  Specimen_RawData_3.csv  Specimen_RawData_4.csv  Specimen_RawData_5.csv  Specimen_RawData_6.csv  Untitled.ipynb  lab_cure_data.csv  optimal_cure_data.csv
stat-thermo/polymers/.ipynb_checkpoints/: Specimen_RawData_1-checkpoint.csv  Untitled-checkpoint.ipynb
