[tool.poetry]
name = "stat-thermo"
version = "0.1.0"
description = "A python package for NE334, a UW NE undergraduate course"
authors = ["Matthew Athanasopoulos <matthew.athanasopoulos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
genanki = "^0.13.1"
pandas = "^2.2.3"
tqdm = "^4.66.5"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
