[tool.poetry]
name = "stat-thermo"
version = "0.1.0"
description = "A python package for NE334, a UW NE undergraduate course"
authors = ["Matthew Athanasopoulos <matthew.athanasopoulos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "<2.0.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
tqdm = "^4.66.5"
seaborn = "^0.13.2"
polars = "^1.9.0"
pyarrow = "^17.0.0"
openmm = "^8.1.1"
mdtraj = "^1.10.1"
tables = "^3.10.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
tqdm = "^4.67.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
